--- a/tagme3a.css
+++ b/tagme3a.css
@@ -1,8 +1,13 @@
+body{
+    max-width: 100%;
+    min-width: 0%;
+}
 div{
+    width: 80%;
     color: white;
     background-color: rgba(199, 77, 247, 0.293);
     padding: 0px 100px;
-    margin: 50px 200px;
+    margin: 0px 20px;
     border-radius: 20px;
     height: fit-content;
     text-transform: capitalize;
@@ -27,6 +32,9 @@ h1 , h2{
     text-shadow: 3px 2px 2px rgba(255, 0, 242, 0.585) ,  -3px -2px 2px rgba(106, 0, 176, 0.585)  ;
 }
 p{
-    white-space: pre-wrap;
-    
+    width: 100%;
+}
+img{
+
+max-width: 1500px;
 }
